borrados un par de imports

--- a/TPMetodosAgiles/src/main/java/Presentacion/Login.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/Login.form
@@ -129,9 +129,9 @@
                               <Component id="jLabel30" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="ingresar" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
-                              <Component id="error" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                              <Component id="error" min="-2" pref="32" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                       </Group>
